force-app/main/default/objects/tython__Analysis__c/fields/tython__AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>tython__AsyncApexJobId__c</fullName>
    <label>Async Apex Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>