force-app/main/default/objects/tython__Analysis__c/fields/tython__ErrorMessages__c.field-meta.xml
<CustomField>
    <fullName>tython__ErrorMessages__c</fullName>
    <label>Error Messages</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>