force-app/main/default/objects/tython__Analysis__c/fields/tython__Type__c.field-meta.xml
<CustomField>
    <fullName>tython__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>