force-app/main/default/objects/tython__Analysis__c/fields/tython__Username__c.field-meta.xml
<CustomField>
    <fullName>tython__Username__c</fullName>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>